--- a/problem solving using python/19 sep2019(Day 4)/19 sep(Day 4).ipynb
+++ b/problem solving using python/19 sep2019(Day 4)/19 sep(Day 4).ipynb
@@ -1,6 +1,944 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regular Expression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### phone number validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a phone number9490171812\n",
+      " phone number matched\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re \n",
+    "def phone(n):\n",
+    "    pattern=\"[9876][0-9]{9}|[0][9876][0-9]{9}[9][1][9876][0-9]{9}\"\n",
+    "    if re.match(pattern,n):\n",
+    "        print(' phone number matched')\n",
+    "    else:\n",
+    "        print('not valid')\n",
+    "n=input(\"enter a phone number\")\n",
+    "phone(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mail validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter mailchaitanyavajapai@gmail.com\n",
+      "matched the mail id\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def mali(gmail):\n",
+    "    pattern=\"[0-9a-z][a-z0-9._]{6,18}[0-9a-z][@][a-z0-9]{4,13}[.][a-z]{2,4}\"\n",
+    "    if re.match(pattern,gmail):\n",
+    "        print(\"matched the mail id\")\n",
+    "    else:\n",
+    "        print(\"not a valid mail\")\n",
+    "gmail=input(\"enter mail\")\n",
+    "mali(gmail)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## File Handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apssdc\n",
+      "line \n",
+      "line1 \n",
+      "line2 \n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open(\"datafile/file.txt\",'r')\n",
+    "print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"datafile/file.txt\",'r') as fr:\n",
+    "    print(fr.read())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"datafile/file.txt\",'w') as fw:\n",
+    "    print(fw.write('line inserted'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"datafile/file.txt\",'a') as fa:\n",
+    "    print(fa.write('\\n''line inserted successfully'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"datafile/file.txt\",'w') as nw:\n",
+    "    for i in range(1,10):\n",
+    "        j=str(i)\n",
+    "        print(nw.write(j))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "helo\n",
+      "how r u\n",
+      "how am i looking\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"datafile/new.txt\",'w') as n:\n",
+    "    for i in range(1,5):\n",
+    "        s=input()\n",
+    "        n.write(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"datafile/new.txt\",'w') as n:\n",
+    "    for i in range(1,11):\n",
+    "        n.write(str(i))\n",
+    "        n.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "55\n",
+      "5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename=\"datafile/new.txt\"\n",
+    "def avgfno(filename):\n",
+    "    s=0\n",
+    "    with open(filename,'r') as nr:\n",
+    "        for i in range(1,11):\n",
+    "            print(nr.read())\n",
+    "            s=s+i\n",
+    "            c=s/10\n",
+    "        print(s)\n",
+    "        print(c)\n",
+    "avgfno(\"datafile/new.txt\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python \n",
+      "is\n",
+      "a\n",
+      "programming\n",
+      "language\n",
+      "and\n",
+      "its \n",
+      "a\n",
+      "easy\n",
+      "way \n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"datafile/text.txt\",'w') as t:\n",
+    "    for i in range(1,11):\n",
+    "        s=input()\n",
+    "        t.write(s)\n",
+    "        t.write(' ')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n",
+      "is\n",
+      "a\n",
+      "programming\n",
+      "language\n",
+      "and\n",
+      "its\n",
+      "a\n",
+      "easy\n",
+      "way\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('datafile/text.txt','r') as tr:\n",
+    "    r=tr.read()\n",
+    "    d=r.split()\n",
+    "    for i in d:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']\n",
+      "55 10\n",
+      "5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('datafile/new.txt','r') as tr:\n",
+    "    s=0\n",
+    "    c=0\n",
+    "    r=tr.read()\n",
+    "    d=r.split()\n",
+    "    print(d)\n",
+    "    for i in d:\n",
+    "        s=s+int(i)\n",
+    "        c=c+1\n",
+    "    print(s,c)\n",
+    "    print(s/c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 456, 658, 85, 56}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s={1,2,3,1,456,658,85,4,2,3,1,4,56,658}\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__and__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__iand__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__ior__',\n",
+       " '__isub__',\n",
+       " '__iter__',\n",
+       " '__ixor__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__or__',\n",
+       " '__rand__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__ror__',\n",
+       " '__rsub__',\n",
+       " '__rxor__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " '__xor__',\n",
+       " 'add',\n",
+       " 'clear',\n",
+       " 'copy',\n",
+       " 'difference',\n",
+       " 'difference_update',\n",
+       " 'discard',\n",
+       " 'intersection',\n",
+       " 'intersection_update',\n",
+       " 'isdisjoint',\n",
+       " 'issubset',\n",
+       " 'issuperset',\n",
+       " 'pop',\n",
+       " 'remove',\n",
+       " 'symmetric_difference',\n",
+       " 'symmetric_difference_update',\n",
+       " 'union',\n",
+       " 'update']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 56, 85, 456, 658}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1={1,2,3,5}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 5}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " s2=s1.intersection(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s2=s1.union(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 56, 85, 456, 658}"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# discard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'blue', 'red', 'green'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "color={'blue','red','green','iphone'}\n",
+    "color.discard('iphone')\n",
+    "print(color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s4={'blue','red','green','yellow','white'}\n",
+    "s5={'green','white','yellow'}\n",
+    "s6=s4.intersection(s5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'green', 'white', 'yellow'}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s7={'blue','red','green','yellow','white'}\n",
+    "s8={'green','white','yellow'}\n",
+    "s9=s7.union(s8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'blue', 'green', 'red', 'white', 'yellow'}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s10={'blue','red','green','yellow','white'}\n",
+    "s11={'green','white','yellow'}\n",
+    "s12=s10.isdisjoint(s11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s13={'blue','red','green','yellow','white'}\n",
+    "s14={'green','white','yellow'}\n",
+    "s15=s13.issubset(s14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s15"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functional programming\n",
+    "list comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 8 27 64 125 216 343 512 729 1000 \n",
+      " [1, 8, 27, 64, 125, 216, 343, 512, 729, 1000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10\n",
+    "l=[]\n",
+    "for i in range(1,n+1):\n",
+    "    print(i**3,end=' ')\n",
+    "    l.append(i**3)\n",
+    "print('\\n',l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " [1, 8, 27, 64, 125, 216, 343, 512, 729, 1000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10\n",
+    "l=[]\n",
+    "for i in range(1,n+1):\n",
+    "    l.append(i**3)\n",
+    "print('\\n',l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[i for i in range(1,11)  if i%2==0]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'split'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-89-f62d00af361c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'python programming language'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'easy to understand'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ml1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'split'"
+     ]
+    }
+   ],
+   "source": [
+    "l=['python programming language','easy to understand']\n",
+    "l1=l.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n",
+      "programming\n",
+      "language\n",
+      "easy\n",
+      "to\n",
+      "understand\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=['python', 'programming', 'language','easy', 'to', 'understand']\n",
+    "for i in l:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n",
+      "programming\n",
+      "j\n",
+      "language\n"
+     ]
+    }
+   ],
+   "source": [
+    "j=iter(l)\n",
+    "print(next(j))\n",
+    "print(next(j))\n",
+    "print('j')\n",
+    "print(next(j))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = iter('cse')\n",
+    "print(next(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(next(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen():\n",
+    "    return 0\n",
+    "s=gen()\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object gen at 0x000002719DEB5840>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen():\n",
+    "    yield 1\n",
+    "    yield 2\n",
+    "    yield 3\n",
+    "    yield 4\n",
+    "s=gen()\n",
+    "print(s)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
