--- a/problem solving using python/20sep 2019/20 sep 2019.ipynb
+++ b/problem solving using python/20sep 2019/20 sep 2019.ipynb
@@ -425,6 +425,592 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h=lambda x :x%2==0\n",
+    "list(filter(h,[1,2,3,4,5,6]))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4,5,6,7,8,9,10]\n",
+    "o=lambda i:i%2!=0\n",
+    "list(filter(o,l))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "11\n",
+      "8\n",
+      "13\n",
+      "22\n",
+      "24\n",
+      "21\n",
+      "12\n",
+      "21\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint as r \n",
+    "for  i in range(1,10+1):\n",
+    "    print(r(1,25))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 5, 4, 21, 3, 17, 6, 14, 1, 11]\n",
+      "[19, 2, 22, 24, 13, 15, 9, 17, 2, 7]\n",
+      "[20, 10, 22, 25, 12, 6, 11, 7, 20, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m1=[r(1,25)for i in range(1,11)]\n",
+    "m2=[r(1,25)for i in range(1,11)]\n",
+    "m3=[r(1,25)for i in range(1,11)]\n",
+    "print(m1)\n",
+    "print(m2)\n",
+    "print(m3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 3, 13, 22, 8, 16, 7, 15, 1, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1=list(map(lambda x,y:(x+y)//2,m1,m2))\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13, 5, 16, 23, 9, 12, 8, 12, 7, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2=list(map(lambda x,y,z:(x+y+z)//3,m1,m2,m3))\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 8, 7, 1, 9]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k=lambda x:x<10\n",
+    "list(filter(k,a1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 9, 8, 7]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g=lambda x:x<10\n",
+    "list(filter(g,a2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4]\n",
+    "a1=np.array(l)\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [1 2 3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "k=[[1,2,3,4],[1,2,3,4]]\n",
+    "a2=np.array(k)\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 1  2  3  4]\n",
+      " [25  5 47 54]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "j=[[1,2,3,4],[1,2,3,4],[25,5,47,54]]\n",
+    "a3=np.array(j)\n",
+    "print(a3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(9)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      "  24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
+      "  48 49]\n",
+      " [50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73\n",
+      "  74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97\n",
+      "  98 99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(100).reshape(2,50)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5  6  7  8  9]\n",
+      " [10 11 12 13 14 15 16 17 18 19]\n",
+      " [20 21 22 23 24 25 26 27 28 29]\n",
+      " [30 31 32 33 34 35 36 37 38 39]\n",
+      " [40 41 42 43 44 45 46 47 48 49]\n",
+      " [50 51 52 53 54 55 56 57 58 59]\n",
+      " [60 61 62 63 64 65 66 67 68 69]\n",
+      " [70 71 72 73 74 75 76 77 78 79]\n",
+      " [80 81 82 83 84 85 86 87 88 89]\n",
+      " [90 91 92 93 94 95 96 97 98 99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(100).reshape(10,10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1]\n",
+      " [ 2  3]\n",
+      " [ 4  5]\n",
+      " [ 6  7]\n",
+      " [ 8  9]\n",
+      " [10 11]\n",
+      " [12 13]\n",
+      " [14 15]\n",
+      " [16 17]\n",
+      " [18 19]\n",
+      " [20 21]\n",
+      " [22 23]\n",
+      " [24 25]\n",
+      " [26 27]\n",
+      " [28 29]\n",
+      " [30 31]\n",
+      " [32 33]\n",
+      " [34 35]\n",
+      " [36 37]\n",
+      " [38 39]\n",
+      " [40 41]\n",
+      " [42 43]\n",
+      " [44 45]\n",
+      " [46 47]\n",
+      " [48 49]\n",
+      " [50 51]\n",
+      " [52 53]\n",
+      " [54 55]\n",
+      " [56 57]\n",
+      " [58 59]\n",
+      " [60 61]\n",
+      " [62 63]\n",
+      " [64 65]\n",
+      " [66 67]\n",
+      " [68 69]\n",
+      " [70 71]\n",
+      " [72 73]\n",
+      " [74 75]\n",
+      " [76 77]\n",
+      " [78 79]\n",
+      " [80 81]\n",
+      " [82 83]\n",
+      " [84 85]\n",
+      " [86 87]\n",
+      " [88 89]\n",
+      " [90 91]\n",
+      " [92 93]\n",
+      " [94 95]\n",
+      " [96 97]\n",
+      " [98 99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(100).reshape(50,2)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      " [20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39]\n",
+      " [40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59]\n",
+      " [60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79]\n",
+      " [80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(100).reshape(5,20)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[20 21 22 23 24]\n",
+      " [25 26 27 28 29]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.arange(20,30).reshape(2,5)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[22 23 24]\n",
+      " [25 26 27]]\n",
+      "\n",
+      "\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "\n",
+      "\n",
+      "[[22 23 24]\n",
+      " [25 26 27]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1=np.arange(22,28).reshape(2,3)\n",
+    "a2=np.arange(1,7).reshape(2,3)\n",
+    "a3=np.arange(22,28).reshape(2,3)\n",
+    "print(a1)\n",
+    "print('\\n')\n",
+    "print(a2)\n",
+    "print('\\n')\n",
+    "print(a3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[23, 25, 27],\n",
+       "       [29, 31, 33]])"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1+a2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[21, 21, 21],\n",
+       "       [21, 21, 21]])"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1-a2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 22,  46,  72],\n",
+       "       [100, 130, 162]])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1*a2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a1.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[484 529 576]\n",
+      " [625 676 729]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sqrt(a1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.shape(a1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
